# bus-backend

./: .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  main.py  metadata.db  pyproject.toml  pytest.ini
.github/workflows/: format.yml
demo/: db explore demo.webm
docker/: Dockerfile  Dockerfile.test
requirements/: requirements.txt
src/: __init__.py  mixins.py  models.py  schema.py
src/auth/: router.py  schemas.py
src/db/: __init__.py  config.py  mixins.py  schemas.py
src/db/columns/: schemas.py
src/db/projects/: projectschemas.py
src/db/schemas/: models.py  schemas.py
src/db/tables/: models.py  schemas.py
src/db/users/: userschemas.py
src/db/utils/: decode.py  seed.py
src/mixins/: ID.py  TimeStamp.py
src/projects/: models.py  router.py  schemas.py
src/service/providers/: mysql_adapter.py  postgresql_adapter.py
src/service/providers/mariadb/: __init__.py  mariadb_adapter.py  mariadb_seed.py
src/service/providers/mysql/: __init__.py  mysql_adapter.py  mysql_seed.py
src/service/providers/postgres/: __init__.py  postgresql_adapter.py  postgresql_seed.py
src/users/: models.py  router.py  schemas.py
static/css/: styles.css
templates/: base.html  dashboard.html  sidebar.html
tests/: conftest.py  test_api.py
tests/auth/: test_auth.py
